# endless_tic_tac_toe

./: .gitignore  Cargo.toml
application/: package-lock.json  package.json
application/src-tauri/: Cargo.toml  tauri.conf.json
application/src-tauri/src/: lib.rs
application/src/components/: Square.svelte
application/src/routes/: +page.svelte
desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: Cargo.toml  package-lock.json  package.json  tsconfig.json
frontend/src/components/: Board.svelte
frontend/src/routes/: +layout.svelte
server/: Cargo.toml
server/src/: main.rs
