[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }